Agrega al imputnumber que se pueda recorrer a numeros negativos

--- a/Practica_Prioridades/Practica_Prioridades/Practica_Prioridades.csproj
+++ b/Practica_Prioridades/Practica_Prioridades/Practica_Prioridades.csproj
@@ -7,10 +7,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Content Remove="Components\Pages\R_Clientes.razor" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.1">
@@ -20,15 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <UpToDateCheckInput Remove="Components\Pages\R_Clientes.razor" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <_ContentIncludedByDefault Remove="Components\Pages\R_Clientes.razor" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Include="Components\Pages\R_Clientes.razor" />
+    <Folder Include="Data\" />
   </ItemGroup>
 
 </Project>
