--- a/Practica_Prioridades/Practica_Prioridades/appsettings.json
+++ b/Practica_Prioridades/Practica_Prioridades/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "ConStr": "Data source = Data\\Prioridades.Db"
+    "ConStr": "Data source = Data\\Registros_Ticket.Db"
   },
   "Logging": {
     "LogLevel": {
