--- a/Practica_Prioridades/Practica_Prioridades/Practica_Prioridades.csproj
+++ b/Practica_Prioridades/Practica_Prioridades/Practica_Prioridades.csproj
@@ -16,6 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Components\Pages\TicketsPages\" />
     <Folder Include="Data\" />
   </ItemGroup>
 
